syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/techschool/simplebank/pb";

message User {
    string username = 1;
    string full_name = 2;
    string email = 3;
    google.protobuf.Timestamp password_changed_at = 4;
    google.protobuf.Timestamp created_at = 5;
}
